--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,12 @@ build_flags =
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
-build_flags = ${all_platforms.build_flags}
 framework = arduino
+build_flags = ${all_platforms.build_flags}
+monitor_speed = ${all_platforms.monitor_speed}
+lib_deps =
+    166 ; Adafruit BME280 Library
+    31 ; Adafruit Unified Sensor
 
 [env:m5stack-core-esp32]
 platform = espressif32
@@ -30,3 +34,8 @@ board = m5stack-core-esp32
 framework = arduino
 build_flags = ${all_platforms.build_flags}
 monitor_speed = ${all_platforms.monitor_speed}
+lib_deps =
+    166 ; Adafruit BME280 Library
+    31 ; Adafruit Unified Sensor
+    1851 ; M5Stack
+
